# pydocstring

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/pydocstring/: __init__.py  _pydocstring.pyi  _visitor.py  model.py  model.pyi
bindings/python/python/pydocstring/_pydocstring/: __init__.pyi  model.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_corpus_parity.py  test_griffe_differential.py  test_napoleon_differential.py  test_pydocstring.py  test_recipe_deprecation_injection.py  test_semantic_edits.py
docs/design/: 135-semantic-edits-reference.py  editing-model.md
examples/: parse_auto.rs  parse_google.rs  parse_numpy.rs
scripts/: api_parity.py  api_parity_allow.toml
src/: cursor.rs  edit.rs  emit.rs  lib.rs  matcher.rs  model.rs  parse.rs  pattern.rs  rewrite.rs  syntax.rs  text.rs
src/emit/: google.rs  numpy.rs  sphinx.rs
src/parse/: dispatch.rs  google.rs  kind.rs  nodes.rs  numpy.rs  plain.rs  text_block.rs  to_model.rs  token_ref.rs  trivia.rs  unified.rs  utils.rs  visitor.rs
src/parse/google/: kind.rs  nodes.rs  parser.rs  to_model.rs
src/parse/numpy/: kind.rs  nodes.rs  parser.rs  to_model.rs
src/parse/plain/: nodes.rs  parser.rs  to_model.rs
tests/: coverage.rs  detect_style.rs  edit.rs  emit.rs  matcher.rs  model.rs  pattern.rs  plain.rs  rewrite.rs  roundtrip.rs  snapshots.rs  trivia.rs  unified.rs  visitor.rs
tests/common/: mod.rs
tests/corpus/: README.md  THIRD_PARTY_NOTICES.md
tests/corpus/google/: all_sections.snap  args_basic.snap  args_complex_type.snap  args_description_on_next_line.snap  args_kwargs_with_type.snap  args_multiline_description.snap  args_name_span.snap  args_name_span.txt  args_no_type.snap  args_optional_span.snap  args_optional_span.txt  args_square_bracket_complex_type.snap  args_square_bracket_complex_type.txt  args_square_bracket_optional.snap  args_varargs.snap  arguments_alias.snap  arguments_alias.txt  attention_section.snap  attention_section.txt  attribute_singular_alias.snap  attribute_singular_alias.txt  attributes_no_type.txt  caution_section.snap  caution_section.txt  danger_section.snap  danger_section.txt  docstring_like_parameters.snap  error_section.snap  error_section.txt  example_section.txt  examples_alias.snap  examples_alias.txt  freetext_sections.txt  hint_section.snap  hint_section.txt  important_section.snap  important_section.txt  indented_docstring.snap  indented_summary_only.snap  keyword_args_section_body_variant.snap  (+63 more)
tests/corpus/numpy/: attributes_basic.snap  attributes_section_body_variant.snap  attributes_section_body_variant.txt  case_insensitive_sections.snap  deprecation_directive.txt  description_with_colon_not_treated_as_param.txt  docstring_span_covers_entire_input.snap  enum_type_with_default.txt  example_alias.snap  example_alias.txt  examples_section_body_variant.snap  examples_section_body_variant.txt  google_style_entry_in_numpy_section.snap  google_style_entry_in_numpy_section.txt  google_style_entry_no_colon_after_bracket.txt  google_style_entry_with_continuation.snap  google_style_entry_with_optional.snap  google_style_entry_with_optional.txt  google_style_mixed_with_numpy_style.snap  google_style_mixed_with_numpy_style.txt  indented_docstring.snap  indented_with_deprecation.snap  indented_with_deprecation.txt  methods_section_body_variant.snap  methods_section_body_variant.txt  methods_with_colon.snap  methods_without_parens.snap  methods_without_parens.txt  mixed_indent_first_line.snap  multi_paragraph_description.txt  multiple_parameter_names.snap  multiple_parameters_with_blank_line_between.snap  note_alias.snap  note_alias.txt  other_parameters_basic.snap  other_parameters_basic.txt  other_parameters_section_body_variant.snap  other_parameters_section_body_variant.txt  other_params_alias.snap  (+60 more)
tests/google/: args.rs  edge_cases.rs  freetext.rs  main.rs  raises.rs  returns.rs  sections.rs  structured.rs  summary.rs
tests/numpy/: edge_cases.rs  freetext.rs  main.rs  parameters.rs  raises.rs  returns.rs  sections.rs  structured.rs  summary.rs
(+338 files in other folders)
