[package]
name = "pydocstring-python"
version = "0.1.13"
edition = "2024"
authors = ["Ryuma Asai"]
description = "Python bindings for pydocstring — a fast docstring parser for Google and NumPy styles"
license = "MIT"
publish = false

[lib]
name = "pydocstring"
crate-type = ["cdylib"]

[dependencies]
pydocstring_core = { package = "pydocstring", version = "0.1.13", path = "../.." }
pyo3 = { version = "0.28", features = ["py-clone", "abi3-py310"] }
