[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pydocstring-rs"
version = "0.1.15"
description = "Python bindings for pydocstring — a zero-dependency Rust parser for Python docstrings (Google and NumPy styles) with a unified syntax tree and byte-precise source locations"
license = {text = "MIT"}
authors = [{name = "Ryuma Asai"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
keywords = ["docstring", "parser", "google", "numpy", "documentation"]

[project.urls]
Repository = "https://github.com/ryumasai/pydocstring"
Documentation = "https://github.com/ryumasai/pydocstring"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "pydocstring._pydocstring"
python-source = "python"
features = ["pyo3/extension-module"]
include = ["LICENSE"]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8",
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[tool.uv]
# uv provisions the Python interpreter and dev environment; the native
# extension itself is compiled with `maturin develop`, so uv should not
# try to build/install this project during `uv sync`.
package = false

[tool.ruff]
target-version = "py310"
src = ["python", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
force-single-line = true
